# bazel-lib

./: MODULE.bazel  internal_deps.bzl
e2e/copy_to_directory/tar/: BUILD.bazel
lib/: BUILD.bazel  repositories.bzl  stamping.bzl  transitions.bzl
lib/private/: stamping.bzl  tar_toolchain.bzl
lib/private/docs/: BUILD.bazel
lib/tests/stamping/: BUILD.bazel  stamp_aware_rule.bzl
